--- a/src/app/features/main-search/components/page/page.component.html
+++ b/src/app/features/main-search/components/page/page.component.html
@@ -1,40 +1,35 @@
-<div class=" content-search-main">
+<div class="content-search-main">
         <div class="has-text-centered">
                 <img class="img-ngx" src="assets/img/lNegux.png">
                 <input-seeker></input-seeker>
         </div>
-        <div class="columns">
-                <div class="column is-4 has-text-centered is-half is-offset-one-quarter">
-                        <div class="field is-grouped is-grouped-centered is-4 justify-content-between">
-                                <div class="has-text-centered">
-                                        <i class="desktopicon-"></i>
-                                        <br>
-                                        <span>Electrodo...</span>
-                                </div>
-                                <div class="has-text-centered">
-                                        <i class="food-1icon-"></i>
-                                        <br>
-                                        <span>Comidas</span>
-                                </div>
-                                <div class="has-text-centered">
-                                        <i class="toolsicon-"></i>
-                                        <br>
-                                        <span>Herramientas</span>
-                                </div>
-                                <div class="has-text-centered">
-                                        <i class="bicycleicon-"></i>
-                                        <br>
-                                        <span>Deportes</span>
-                                </div>
+        <div class="column is-4 has-text-centered is-half is-offset-one-quarter m-auto">
+                <div class="field is-grouped is-grouped-centered is-4 justify-content-between">
+                        <div class="has-text-centered">
+                                <i class="desktopicon-"></i>
+                                <br>
+                                <span>Electrodo...</span>
+                        </div>
+                        <div class="has-text-centered">
+                                <i class="food-1icon-"></i>
+                                <br>
+                                <span>Comidas</span>
+                        </div>
+                        <div class="has-text-centered">
+                                <i class="toolsicon-"></i>
+                                <br>
+                                <span>Herramientas</span>
+                        </div>
+                        <div class="has-text-centered">
+                                <i class="bicycleicon-"></i>
+                                <br>
+                                <span>Deportes</span>
                         </div>
                 </div>
         </div>
-        <br>
-        <div class="row">
-                <div class="col-12   col-md-6 offset-md-3 col-lg-6 offset-lg-3 fos-light main-text">
-                        Ahora es más facil localizar el
-                        <br>producto que necesitas
-                </div>
+        <div class="main-text mt-3">
+                Ahora es más facil localizar el
+                <br>producto que necesitas
         </div>
 </div>
         <!-- <div class="container-fluid content-search-main">
