changes  for good function in  ssr

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="level-right bd-structure-item" title="level-right">
-      <profile-options></profile-options>
+      <!-- <profile-options></profile-options> -->
     </div>
   </div>
 </nav>
