Adding search result view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- Nav-->
 <app-header></app-header>
-<app-test></app-test>
+<!-- <app-test></app-test> -->
 <!-- Main Content-->
 <main>
     <!-- Router Outlet -->
