Adding titillium font

--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -24,6 +24,7 @@ $navbar-light: purple;
 
 $color-primary: #179da5;
 $color-dark: #2A2f39;
+$font: 'titillium-light';
 
 $primary: $color-primary;
 // $link:;
@@ -34,4 +35,4 @@ $primary: $color-primary;
 $dark: $color-dark;
 // $light:
 
-// $family-primary: $font;
+$family-primary: $font;
