applying styles in the title section

--- a/src/app/features/search-result/components/products-list/products-list.component.html
+++ b/src/app/features/search-result/components/products-list/products-list.component.html
@@ -1,4 +1,4 @@
-<h5 class="title-section-ngx"><span class="color-nro-results">{{productsCount}} </span>{{title}}</h5>
+<h5 class="title-section"><span>{{productsCount}} </span>{{title}}</h5>
 
 <div class="columns is-multiline">
   <div *ngFor="let product of products" class="col-1ths col-2ths col-sm-3ths col-md-4ths col-lg-5ths">
