--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -25,6 +25,7 @@ $navbar-light: purple;
 $color-primary: #179da5;
 $color-dark: #2A2f39;
 $font: 'titillium-light';
+$font-bold: 'titillium-bold';
 
 $primary: $color-primary;
 // $link:;
