Adding actions section

--- a/src/app/features/store-detail/pages/store-detail.component.html
+++ b/src/app/features/store-detail/pages/store-detail.component.html
@@ -1,5 +1,5 @@
 <app-head-store *ngIf="headData" [data]="headData" id="home"></app-head-store>
-
+<app-actions *ngIf="idStore&&headData" [data]="headData" id="actions"></app-actions>
 
 
 <!-- FACEBOOK -->
