Adding catalogue section

--- a/src/app/features/search-result/components/products-list/products-list.component.html
+++ b/src/app/features/search-result/components/products-list/products-list.component.html
@@ -2,7 +2,7 @@
 
 <div class="columns is-multiline">
   <div *ngFor="let product of products" class="col-1ths col-2ths col-sm-3ths col-md-4ths col-lg-5ths">
-    <ngx-product-card [data]="product"></ngx-product-card>
+    <app-product-card [data]="product"></app-product-card>
   </div>
 </div>
 
