--- a/src/app/features/store-detail/pages/store-detail.component.html
+++ b/src/app/features/store-detail/pages/store-detail.component.html
@@ -1,5 +1,10 @@
 <app-head-store *ngIf="headData" [data]="headData" id="home"></app-head-store>
 <app-actions *ngIf="idStore&&headData" [data]="headData" id="actions"></app-actions>
+<div class="container c-color-bg" id="catalogue">
+  <div class="main-content" style="overflow-x: hidden;">
+    <app-catalogue *ngIf="idStore && headData" [data]="headData"></app-catalogue>
+  </div>
+</div>
 
 
 <!-- FACEBOOK -->
