--- a/src/app/features/store-detail/pages/store-detail.component.html
+++ b/src/app/features/store-detail/pages/store-detail.component.html
@@ -7,9 +7,9 @@
 </div>
 <app-team *ngIf="headData && headData.team.length > 0" id="team" [team]="headData.team"></app-team>
 <app-pricing *ngIf="headData && headData.promotionImages.length > 0" id="promotion" [data]="headData"></app-pricing>
-<!-- <ngx-pricing-store *ngIf="headData && headData.promotionImages.length > 0" id="promotion" [data]="headData"></ngx-pricing-store> -->
-<!-- FACEBOOK -->
-<!-- <div id="facebook-chat">
+<app-contact *ngIf="headData&&branchData" [storeName]="headData.store.nameStore" [data]="branchData" id="contact"></app-contact>
+
+<div id="facebook-chat">
   <div id="fb-root"></div>
   <script>
     (function (d, s, id) {
@@ -25,4 +25,4 @@
 
   <div class="fb-customerchat" attribution=setup_tool page_id="410562542433325">
   </div>
-</div> -->
+</div>
