--- a/src/app/features/store-detail/components/catalogue/catalogue.component.html
+++ b/src/app/features/store-detail/components/catalogue/catalogue.component.html
@@ -21,14 +21,20 @@
   </div>
 </div>
 
+<button class="button is-primary" (click)="open(showDetails)"> </button>
 <!-- Catalogue List -->
 
 <div class="columns is-multiline">
   <div *ngFor="let product of products" class="col-1ths col-2ths col-sm-3ths col-md-4ths col-lg-5ths">
-    <app-product-card [data]="product"></app-product-card>
+    <app-product-card [data]="product" [isStore]="true"></app-product-card>
   </div>
 </div>
 
 <div class="row button-vermas">
   <button *ngIf="!finished" class="col-center btn ngx-button" (click)="getTotalProducts()">Ver más</button>
 </div>
+
+
+<ng-template #showDetails>
+  <h1>This is a detail product</h1>
+</ng-template>
