--- a/src/app/features/store-detail/pages/store-detail.component.html
+++ b/src/app/features/store-detail/pages/store-detail.component.html
@@ -9,7 +9,7 @@
 <app-pricing *ngIf="headData && headData.promotionImages.length > 0" id="promotion" [data]="headData"></app-pricing>
 <app-contact *ngIf="headData&&branchData" [storeName]="headData.store.nameStore" [data]="branchData" id="contact"></app-contact>
 
-<div id="facebook-chat">
+<!-- <div id="facebook-chat">
   <div id="fb-root"></div>
   <script>
     (function (d, s, id) {
@@ -25,4 +25,4 @@
 
   <div class="fb-customerchat" attribution=setup_tool page_id="410562542433325">
   </div>
-</div>
+</div> -->
