--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,24 +1,22 @@
 <div class="modal modal-fx-slideRight" #modal>
   <div class="modal-background"></div>
-  <div class="modal-content">
-    <div class="modal-card">
-      <header class="modal-card-head">
-        <p class="modal-card-title">
-          {{ config.data.title }}
-        </p>
-        <button class="delete" aria-label="close" (click)="close()"></button>
-      </header>
-      <section class="modal-card-body">
-        <ng-template appInsertion></ng-template>
-      </section>
-      <footer class="modal-card-foot" *ngIf="config.data.optionOk || config.data.optionCancel">
-        <button class="button is-success" >
-          {{ config.data.optionOk }}
-        </button>
-        <button class="button"  (click)="close()">
-          {{ config.data.optionCancel }}
-        </button>
-      </footer>
-    </div>
+  <div class="modal-card modal-content {{ config.data.size? 'is-' + config.data.size : '' }}">
+    <header class="modal-card-head">
+      <p class="modal-card-title">
+        {{ config.data.title }}
+      </p>
+      <button class="delete" aria-label="close" (click)="close()"></button>
+    </header>
+    <section class="modal-card-body">
+      <ng-template appInsertion></ng-template>
+    </section>
+    <footer class="modal-card-foot" *ngIf="config.data.optionOk || config.data.optionCancel">
+      <button class="button is-primary" *ngIf="config.data.optionOk" (click)="close()">
+        {{ config.data.optionOk }}
+      </button>
+      <button class="button" *ngIf="config.data.optionCancel" (click)="close()">
+        {{ config.data.optionCancel }}
+      </button>
+    </footer>
   </div>
 </div>
