--- a/src/stylesheets/_mixins.scss
+++ b/src/stylesheets/_mixins.scss
@@ -1,4 +1,5 @@
-@import '_variables';
+@import 'variables';
+@import 'bulma';
 
 @mixin center($top: 50%, $left: 50%) {
   position: absolute;
@@ -23,4 +24,10 @@
 
 @mixin is-bold {
   font-family: $font-bold;
+}
+
+@mixin mobile-extra {
+  @media screen and (max-width: 575px) {
+    @content
+  }
 }
