--- a/src/assets/font/titillium/titillium.css
+++ b/src/assets/font/titillium/titillium.css
@@ -25,3 +25,10 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'titillium';
+  src: url('./font/TitilliumWeb-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
